[gd_scene load_steps=11 format=3 uid="uid://yf7myql71ip5"]

[ext_resource type="Script" path="res://scenes/boss_scene.gd" id="1_td50x"]
[ext_resource type="Texture2D" uid="uid://bb5dcssyn7tpc" path="res://assets/sprites/Backgrounds/darkPurple.png" id="2_ow62i"]
[ext_resource type="PackedScene" uid="uid://bvwwtlxs0abwl" path="res://scenes/player.tscn" id="3_gf0ad"]
[ext_resource type="PackedScene" uid="uid://4tgvvqe2lbdd" path="res://scenes/boss_1_character.tscn" id="4_36g2e"]
[ext_resource type="Script" path="res://scenes/boss_1_character.gd" id="5_voi54"]
[ext_resource type="AudioStream" uid="uid://cs150s7mxhewj" path="res://assets/sprites/Bonus/chiptune-boss-fight-music-265080.wav" id="6_r6f3w"]
[ext_resource type="PackedScene" uid="uid://u6vscqlqgxvf" path="res://scenes/ui.tscn" id="7_ixfgr"]
[ext_resource type="Script" path="res://scenes/boss-ui.gd" id="8_stla8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8hmk"]
size = Vector2(28, 758.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dvsv"]
size = Vector2(1290, 20)

[node name="Boss_scene" type="Node2D"]
script = ExtResource("1_td50x")

[node name="BackgroundImage" type="Sprite2D" parent="."]
position = Vector2(644.5, 359)
scale = Vector2(5.12109, 2.94531)
texture = ExtResource("2_ow62i")
metadata/_edit_lock_ = true

[node name="Borders" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Right" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Right"]
position = Vector2(1290, 364.25)
shape = SubResource("RectangleShape2D_u8hmk")

[node name="Left" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Left"]
position = Vector2(-11, 364.25)
shape = SubResource("RectangleShape2D_u8hmk")

[node name="Top" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Top"]
position = Vector2(642, -7)
shape = SubResource("RectangleShape2D_7dvsv")

[node name="Bottom" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Bottom"]
position = Vector2(639, 726)
shape = SubResource("RectangleShape2D_7dvsv")

[node name="Player" parent="." instance=ExtResource("3_gf0ad")]
z_index = 1
scale = Vector2(0.4, 0.4)

[node name="Lazers" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Boss1Character" parent="." instance=ExtResource("4_36g2e")]
script = ExtResource("5_voi54")

[node name="LaserStartPos" type="Node2D" parent="Boss1Character"]

[node name="BossLasers" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="BossLaserTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_r6f3w")
autoplay = true

[node name="UI" parent="." instance=ExtResource("7_ixfgr")]
script = ExtResource("8_stla8")

[connection signal="collision" from="Player" to="." method="_on_player_collision"]
[connection signal="laser" from="Player" to="." method="_on_player_laser"]
[connection signal="area_entered" from="Boss1Character" to="." method="_on_boss_1_character_area_entered"]
[connection signal="timeout" from="BossLaserTimer" to="Boss1Character" method="_on_boss_lazer_timer_timeout"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
